@@ -34,6 +34,11 @@ real    0m14.851s
 user    0m3.948s
 sys     0m10.509s
 
+D
+real    0m3.400s
+user    0m1.512s
+sys     0m1.476s
+
 Windows
 E
 real    1m37.453s
@@ -47,6 +52,11 @@ real    0m7.935s
 user    0m3.860s
 sys     0m3.692s
 
+D
+real    0m2.644s
+user    0m1.844s
+sys     0m0.724s
+
 Windows
 E
 real    0m38.953s
@@ -59,6 +69,11 @@ E
 real    0m4.251s
 user    0m4.068s
 sys     0m0.092s
+
+D
+real    0m1.984s
+user    0m1.860s
+sys     0m0.068s
 
 Windows
 E
